CREATE TABLE SCENARIO
(
    SCENARIO_ID         INT PRIMARY KEY NOT NULL,
    SCENARIO_TEXT       NVARCHAR        NOT NULL,
    SCENARIO_IS_END     BIT             NOT NULL,
    SCENARIO_PLAYER_WON BIT             NOT NULL
);

CREATE TABLE CHOICE
(
    CHOICE_ID             INT PRIMARY KEY NOT NULL,
    CHOICE_TEXT           NVARCHAR        NOT NULL,
    CHOICE_LEADS_TO       INT REFERENCES SCENARIO (SCENARIO_ID),
    CHOICE_FETCHABLE_ITEM INT REFERENCES ITEM (ITEM_ID),
    CHOICE_USABLE_ITEM    INT REFERENCES ITEM_CATEGORY (ITEM_CATEGORY_ID),
    CHOICE_FEEDBACK       VARCHAR
);

CREATE TABLE SCENARIO_CHOICE
(
    SCENARIO_ID INT REFERENCES SCENARIO (SCENARIO_ID) NOT NULL,
    CHOICE_ID   INT REFERENCES CHOICE (CHOICE_ID)     NOT NULL,
    PRIMARY KEY (SCENARIO_ID, CHOICE_ID)
);

CREATE TABLE ITEM_CATEGORY
(
    ITEM_CATEGORY_ID     INT PRIMARY KEY NOT NULL,
    CATEGORY_NAME        VARCHAR         NOT NULL,
    CATEGORY_DESCRIPTION VARCHAR
);

CREATE TABLE ITEM
(
    ITEM_ID   INT PRIMARY KEY                                    NOT NULL,
    ITEM_NAME NVARCHAR                                           NOT NULL,
    ITEM_DESCRIPTION REFERENCES ITEM_CATEGORY (ITEM_CATEGORY_ID) NOT NULL
);

CREATE TABLE SAVE
(
    SAVE_ID        INT PRIMARY KEY               NOT NULL,
    LAST_FRAME REFERENCES SCENARIO (SCENARIO_ID) NOT NULL,
    SAVE_DATE_TIME DATETIME
);

CREATE TABLE SAVE_ITEM
(
    SAVE_ID INT REFERENCES SAVE (SAVE_ID) NOT NULL,
    ITEM_ID INT REFERENCES ITEM (ITEM_ID) NOT NULL,
    PRIMARY KEY (SAVE_ID, ITEM_ID)
);
